--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -29,6 +29,8 @@ jobs:
         with:
           node-version: "16.x"
           cache: "pnpm"
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         run: pnpm run lint
