--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,4 +33,4 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
-        run: pnpm run lint
+        run: pnpm run lint --no-cache
