--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prisma:generate": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "axios": "^1.4.0",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -30,7 +28,6 @@
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "prisma": "^5.0.0"
+    "prettier": "^2.8.8"
   }
 }
